--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,7 @@ on:
 jobs:
   build:
     name: Build
+    runs-on: unbuntu-latest
 
     steps:
       - name: Checkout code
@@ -23,3 +24,5 @@ jobs:
 
       - name: Upload Artifact
         uses: actions/upload-artifact@main
+        with:
+          path: .
