--- a/java/pom.xml
+++ b/java/pom.xml
@@ -10,6 +10,7 @@
   <properties>
     <revision>0.0.1-SNAPSHOT</revision>
     <java.version>21</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
