--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,9 +9,24 @@
   <description>worlds-api-java-sdk</description>
   <properties>
     <revision>0.0.1-SNAPSHOT</revision>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
     <java.version>21</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <dependencies>
+    <dependency>
+        <groupId>org.springframework.graphql</groupId>
+        <artifactId>spring-graphql</artifactId>
+        <version>1.3.4</version>
+    </dependency>
+    <dependency>
+        <groupId>jakarta.validation</groupId>
+        <artifactId>jakarta.validation-api</artifactId>
+        <version>3.1.1</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
