Re-add contents perm

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,7 @@ jobs:
     name: Build
     runs-on: ubuntu-24.04
     permissions:
+      contents: read
       security-events: write
       packages: write
 
