--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,10 +18,8 @@ jobs:
     name: Build
     runs-on: ubuntu-24.04
     permissions:
-      actions: read
       contents: write
-      security-events: write
-      id-token: write
+      packages: write
 
     steps:
       - name: Checkout
