--- a/java/pom.xml
+++ b/java/pom.xml
@@ -2,10 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <groupId>io.worlds</groupId>
+    <artifactId>worlds-api-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>io.worlds</groupId>
   <artifactId>worlds-api-java-sdk</artifactId>
-  <version>${revision}</version>
   <name>worlds-api-java-sdk</name>
   <description>worlds-api-java-sdk</description>
   <properties>
@@ -20,7 +24,6 @@
     <dependency>
       <groupId>org.springframework.graphql</groupId>
       <artifactId>spring-graphql</artifactId>
-      <version>1.3.4</version>
     </dependency>
     <dependency>
       <groupId>jakarta.validation</groupId>
@@ -42,7 +45,7 @@
             </goals>
             <configuration>
               <graphqlSchemas>
-                <rootDir>../graphql</rootDir>
+                <rootDir>${project.basedir}/../graphql</rootDir>
               </graphqlSchemas>
               <outputDir>src/main/java</outputDir>
               <packageName>io.worlds.api.model</packageName>
