--- a/java-client/pom.xml
+++ b/java-client/pom.xml
@@ -3,16 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>io.worlds</groupId>
-        <artifactId>worlds-api-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+    <groupId>io.worlds</groupId>
     <artifactId>java-client</artifactId>
     <name>worlds-api-java-client</name>
+    <version>${revision}</version>
     <description>Java client for worlds-api</description>
     <properties>
+        <revision>SNAPSHOT</revision>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <java.version>21</java.version>
@@ -21,11 +18,13 @@
         <dependency>
             <groupId>io.worlds</groupId>
             <artifactId>worlds-api-java-sdk</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${revision}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.graphql</groupId>
             <artifactId>spring-graphql</artifactId>
+            <version>1.4.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
